# random-build

./: CHANGELOG.md  LICENSE  README.md  cabal.project  gentoo-haskell-random-builder.cabal  random-build.cabal
.github/workflows/: haskell.yml
app/: CoreMain.hs  Main-mtl.hs  Main.hs
src/GHRB/: Core.hs  IO.hs
src/GHRB/Core/: Types.hs  Utils.hs
src/GHRB/IO/: Cmd.hs  Utils.hs
