cabal-version:   3.4
name:            gentoo-haskell-random-builder
version:         0.1.0.0
synopsis:
  A tool to build random Haskell packages in a gentoo repository and evaluate the success rate.

description:
  A tool to build random Haskell packages in a gentoo repository and
  evaluate the success rate.

homepage:
  https://github.com/GuillaumedeVolpiano/gentoo-haskell-random-builder

license:         BSD-3-Clause
license-file:    LICENSE
author:          Xavier Dectot
maintainer:      xavier@wheredoibegin.fr

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:            warnings
  exposed-modules:
    GHRB.Core
    GHRB.Core.Types
    GHRB.IO
    GHRB.IO.Cmd
    GHRB.IO.Utils

  build-depends:
    , ansi-terminal         ^>=1.1
    , ansi-terminal-types   ^>=1.1
    , base                  >=4.17.0.0
    , bytestring            ^>=0.12.1.0
    , conduit               ^>=1.3.6
    , conduit-extra         ^>=1.3.7
    , effectful             ^>=2.5.1.0
    , effectful-core        ^>=2.5.0
    , flatparse             ^>=0.5.2.1
    , hashable              ^>=1.4.7.0
    , monad-time-effectful  ^>=1.0.0.0
    , mtl                   ^>=2.3.1
    , optparse-applicative  ^>=0.18.1.0
    , portage-hs            ^>=0.1.0.0
    , process ^>=1.6.25.0
    , text                  ^>=2.1.1
    , time                  ^>=1.12
    , transformers          ^>=0.6.1.0
    , unix                  ^>=2.8.6.0
    , unordered-containers  ^>=0.2.20

  hs-source-dirs:   src
  default-language: Haskell2010

executable ghrb
  import:           warnings
  main-is:           Main.hs
  build-depends:
    , base                           >=4.17.0.0
    , bytestring                     ^>=0.12.1.0
    , effectful                      ^>=2.5.1.0
    , effectful-core                 ^>=2.5.0
    , gentoo-haskell-random-builder
    , list-shuffle                   ^>=1.0.0.0
    , monad-time-effectful           ^>=1.0.0.0
    , mtl                            ^>=2.3.1
    , optparse-applicative           ^>=0.18.1.0
    , unix                           ^>=2.8.6.0
    , unordered-containers           ^>=0.2.20

  hs-source-dirs:   app
  default-language: Haskell2010
