cabal-version:   3.4
name:            random-build
version:         0.1.0.0
synopsis:
  A tool to build random Haskell packages in a gentoo repository and evaluate the success rate.

description:
  A tool to build random Haskell packages in a gentoo repository and
  evaluate the success rate.

homepage:
  https://github.com/GuillaumedeVolpiano/random-build

license:         BSD-3-Clause
license-file:    LICENSE
author:          Xavier Dectot
maintainer:      xavier@wheredoibegin.fr

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:            warnings
  exposed-modules:
    GHRB.Core
    GHRB.Core.Types
    GHRB.Core.Utils
    GHRB.IO
    GHRB.IO.Cmd
    GHRB.IO.Utils

  build-depends:
    , base                  >=4.17.0.0
    , bytestring            ^>=0.12.1.0
    , conduit               ^>=1.3.6
    , conduit-extra         ^>=1.3.7
    , directory             ^>=1.3.8.5
    , flatparse             ^>=0.5.2.1
    , hashable              ^>=1.4.7.0
    , monad-time            ^>=0.4.0.0
    , mtl                   ^>=2.3.1
    , optparse-applicative  ^>=0.18.1.0
    , portage-hs            ^>=0.1.0.0
    , prettyprinter                ^>=1.7.0
    , prettyprinter-ansi-terminal  ^>=1.1.3
    , process               ^>=1.6.25.0
    , text                  ^>=2.1.1
    , time                  ^>=1.12
    , time-compat ^>=1.9.8
    , transformers          ^>=0.6.1.0
    , unix                  ^>=2.8.6.0
    , unordered-containers  ^>=0.2.20

  hs-source-dirs:   src
  default-language: Haskell2010

executable random-build
  import:           warnings
  main-is:           Main.hs
  build-depends:
    , base                           >=4.17.0.0
    , bytestring                     ^>=0.12.1.0
    , random-build
    , list-shuffle                   ^>=1.0.0.0
    , monad-time                     ^>=0.4.0.0
    , mtl                            ^>=2.3.1
    , optparse-applicative           ^>=0.18.1.0
    , safe-exceptions ^>=0.1.7.4
    , unix                           ^>=2.8.6.0
    , unordered-containers           ^>=0.2.20

  hs-source-dirs:   app
  default-language: Haskell2010
