cabal-version:   3.4
name:            random-build
version:         0.1.0.0
synopsis:
  Build random packages in a Gentoo repository and evaluate the success rate

description:
  A tool to build random packages in a Gentoo repository and
  evaluate the success rate. Currently, it only supports the ::haskell repo,
  but support for other repos may be added in the future.

homepage:
  https://github.com/gentoo-haskell/random-build

license:         BSD-3-Clause
license-file:    LICENSE
author:          Xavier Dectot
maintainer:      xavier@wheredoibegin.fr

copyright:
  Copyright 2025 Xavier Dectot
  Copyright 2025 Gentoo Authors

category:        Development
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/gentoo-haskell/random-build.git

flag pedantic
  description: Enable -Werror
  default:     False
  manual:      True

common warnings
  ghc-options: -Wall

  if flag(pedantic)
    ghc-options: -Werror

library
  import:            warnings
  exposed-modules:
    GHRB.Core
    GHRB.Core.Types
    GHRB.Core.Utils
    GHRB.IO
    GHRB.IO.Cmd
    GHRB.IO.Utils

  build-depends:
    , base                         >=4.15.1.0 && <4.22
    , bytestring                   >=0.10.12.1 && <0.13
    , conduit                      ^>=1.3.6
    , conduit-extra                ^>=1.3.7
    , effectful                    ^>=2.5.1.0
    , effectful-core               ^>=2.5.0
    , flatparse                    ^>=0.5.2.1
    , monad-time-effectful         ^>=1.0.0.0
    , mtl                          >=2.2.2 && <2.4
    , optparse-applicative         ^>=0.18.1.0
    , portage-hs                   ^>=0.1.0.0
    , prettyprinter                ^>=1.7.0
    , prettyprinter-ansi-terminal  ^>=1.1.3
    , process                      >=1.6.13.2 && <1.7
    , text                         >=1.2.5.0 && <2.2
    , time                         >=1.9.3 && <1.15
    , time-compat                  ^>=1.9.8
    , transformers                 ^>=0.6.1.0
    , unix                         >=2.7.2.2 && <2.9
    , unordered-containers         ^>=0.2.20

  hs-source-dirs:   src
  default-language: Haskell2010

executable random-build
  import:           warnings
  main-is:           Main.hs
  build-depends:
    , base                           >=4.15.1.0 && <4.22
    , bytestring                     >=0.10.12.1 && <0.13
    , effectful                      ^>=2.5.1.0
    , effectful-core                 ^>=2.5.0
    , random-build
    , list-shuffle                   ^>=1.0.0.0
    , monad-time-effectful           ^>=1.0.0.0
    , mtl                            >=2.2.2 && <2.4
    , optparse-applicative           ^>=0.18.1.0
    , unix                           >=2.7.2.2 && <2.9
    , unordered-containers           ^>=0.2.20

  hs-source-dirs:   app
  default-language: Haskell2010
